--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,34 +4,34 @@
 @string{aps = {American Physical Society,}}
 
 
-@inproceedings{lens,
-author = {Sehyun Park* and Dongheon Lee* and Ji Young Lee and Jaeyoung Chun and Ji Young Chang and Eunsu Baek and Eun Hyo Jin and Hyung‑Sin Kim†},
+@inproceedings{colonood,
+author = {Sehyun Park* and Dongheon Lee* and Ji Young Lee and Jaeyoung Chun and Ji Young Chang and Eunsu Baek and Eun Hyo Jin and Hyung‑Sin Kim},
 title = {ColonOOD: A Complete Pipeline for Optical Diagnosis of Colorectal Polyps Integrating Out‑of‑Distribution Detection and
 Uncertainty Quantification},
-booktitle = {The Thirteenth International Conference on Learning Representations (ICLR) 2025},
-year = {2025},
-month = {April},
-abstract = {Domain shift remains a persistent challenge in deep-learning-based computer vision, often requiring extensive model modifications or large labeled datasets to address. Inspired by human visual perception, which adjusts input quality through corrective lenses rather than over-training the brain, we propose Lens, a novel camera sensor control method that enhances model performance by capturing high-quality images from the model's perspective rather than relying on traditional human-centric sensor control. Lens is lightweight and adapts sensor parameters to specific models and scenes in real-time. At its core, Lens utilizes VisiT, a training-free, model-specific quality indicator that evaluates individual unlabeled samples at test time using confidence scores without additional adaptation costs. To validate Lens, we introduce ImageNet-ES Diverse, a new benchmark dataset capturing natural perturbations from varying sensor and lighting conditions. Extensive experiments on both ImageNet-ES and our new ImageNet-ES Diverse show that Lens significantly improves model accuracy across various baseline schemes for sensor control and model modification while maintaining low latency in image captures. Lens effectively compensates for large model size differences and integrates synergistically with model improvement techniques. Our code and dataset are available at github.com/Edw2n/Lens.git.},
-code={https://github.com/Edw2n/Lens},
-pdf={https://openreview.net/pdf?id=He2FGdmsas},
+booktitle = {Expert Systems with Applications, Volume 295, 128756},
+year = {2026},
+month = {January},
+abstract = {The rising prevalence of colorectal cancer necessitates early and accurate optical diagnosis of colorectal polyps. Despite advances in Computer-Aided Diagnosis (CAD) systems, challenges like data variability and inconsistent clinical performance hinder their widespread use. To address these limitations, we propose ColonOOD, an integrated CAD system for polyp localization, uncertainty-aware polyp classification, and Out-of-Distribution (OOD) polyp detection during colonoscopy. ColonOOD ensures robust classification of adenomatous, hyperplastic, and OOD polyps while providing calibrated uncertainty scores to support clinical decisions. Extensive evaluations across four medical centers and two public datasets demonstrate ColonOOD’s strong performance, achieving up to 79.69 % classification and 75.53 % OOD detection accuracy. This system offers reliable insights for endoscopists, marking a significant step toward broader clinical adoption of automated diagnostic tools in colorectal cancer care.
+},
+pdf={https://www.sciencedirect.com/science/article/pii/S0957417425023747},
 bibtex_show={true},
-preview={ImageNet-ES.jpg},
-selected={true},
-abbr={ICLR},
-tags={s4d},
+preview={colonood-preview.png},
+selected={false},
+abbr={ESWA},
+tags={ood},
 }
 
 @inproceedings{lens,
 author = {Eunsu Baek and Taesik Gong and Hyung‑Sin Kim},
 title = {Adaptive Camera Sensor for Vision Model},
-booktitle = {The Thirteenth International Conference on Learning Representations (ICLR) 2025},
+booktitle = {The 13th International Conference on Learning Representations},
 year = {2025},
 month = {April},
 abstract = {Domain shift remains a persistent challenge in deep-learning-based computer vision, often requiring extensive model modifications or large labeled datasets to address. Inspired by human visual perception, which adjusts input quality through corrective lenses rather than over-training the brain, we propose Lens, a novel camera sensor control method that enhances model performance by capturing high-quality images from the model's perspective rather than relying on traditional human-centric sensor control. Lens is lightweight and adapts sensor parameters to specific models and scenes in real-time. At its core, Lens utilizes VisiT, a training-free, model-specific quality indicator that evaluates individual unlabeled samples at test time using confidence scores without additional adaptation costs. To validate Lens, we introduce ImageNet-ES Diverse, a new benchmark dataset capturing natural perturbations from varying sensor and lighting conditions. Extensive experiments on both ImageNet-ES and our new ImageNet-ES Diverse show that Lens significantly improves model accuracy across various baseline schemes for sensor control and model modification while maintaining low latency in image captures. Lens effectively compensates for large model size differences and integrates synergistically with model improvement techniques. Our code and dataset are available at github.com/Edw2n/Lens.git.},
 code={https://github.com/Edw2n/Lens},
 pdf={https://openreview.net/pdf?id=He2FGdmsas},
 bibtex_show={true},
-preview={ImageNet-ES.jpg},
+preview={lens-thumb-short.png},
 selected={true},
 abbr={ICLR},
 tags={s4d},
@@ -57,7 +57,7 @@ tags={s4d},
 @article{10.1145/3631420,
 author = {Kang, Dong-Sig and Baek, Eunsu and Son, Sungwook and Lee, Youngki and Gong, Taesik and Kim, Hyung-Sin},
 title = {[IMWUT 2023 / UbiComp 2024] MIRROR: Towards Generalizable On-Device Video Virtual Try-On for Mobile Shopping},
-year = {2024},
+year = {2023},
 issue_date = {December 2023},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
@@ -66,8 +66,8 @@ number = {4},
 url = {https://doi.org/10.1145/3631420},
 doi = {10.1145/3631420},
 abstract = {We present MIRROR, an on-device video virtual try-on (VTO) system that provides realistic, private, and rapid experiences in mobile clothes shopping. Despite recent advancements in generative adversarial networks (GANs) for VTO, designing MIRROR involves two challenges: (1) data discrepancy due to restricted training data that miss various poses, body sizes, and backgrounds and (2) local computation overhead that uses up 24\% of battery for converting only a single video. To alleviate the problems, we propose a generalizable VTO GAN that not only discerns intricate human body semantics but also captures domain-invariant features without requiring additional training data. In addition, we craft lightweight, reliable clothes/pose-tracking that generates refined pixel-wise warping flow without neural-net computation. As a holistic system, MIRROR integrates the new VTO GAN and tracking method with meticulous pre/post-processing, operating in two distinct phases (on/offline). Our results on Android smartphones and real-world user videos show that compared to a cutting-edge VTO GAN, MIRROR achieves 6.5x better accuracy with 20.1x faster video conversion and 16.9x less energy consumption.},
-journal = {Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.},
-month = {jan},
+journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+month = {December},
 articleno = {163},
 numpages = {27},
 bibtex_show={true},
