update mirror and colonood pages

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@ bibtex_show={true},
 preview={colonood-preview.png},
 selected={false},
 abbr={ESWA},
-tags={ood},
+tags={colonood},
 }
 
 @inproceedings{lens,
