update project list and publication title

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@ tags={s4d},
 
 @article{10.1145/3631420,
 author = {Kang, Dong-Sig and Baek, Eunsu and Son, Sungwook and Lee, Youngki and Gong, Taesik and Kim, Hyung-Sin},
-title = {[IMWUT 2023 / UbiComp 2024] MIRROR: Towards Generalizable On-Device Video Virtual Try-On for Mobile Shopping},
+title = {MIRROR: Towards Generalizable On-Device Video Virtual Try-On for Mobile Shopping},
 year = {2023},
 issue_date = {December 2023},
 publisher = {Association for Computing Machinery},
@@ -66,7 +66,7 @@ number = {4},
 url = {https://doi.org/10.1145/3631420},
 doi = {10.1145/3631420},
 abstract = {We present MIRROR, an on-device video virtual try-on (VTO) system that provides realistic, private, and rapid experiences in mobile clothes shopping. Despite recent advancements in generative adversarial networks (GANs) for VTO, designing MIRROR involves two challenges: (1) data discrepancy due to restricted training data that miss various poses, body sizes, and backgrounds and (2) local computation overhead that uses up 24\% of battery for converting only a single video. To alleviate the problems, we propose a generalizable VTO GAN that not only discerns intricate human body semantics but also captures domain-invariant features without requiring additional training data. In addition, we craft lightweight, reliable clothes/pose-tracking that generates refined pixel-wise warping flow without neural-net computation. As a holistic system, MIRROR integrates the new VTO GAN and tracking method with meticulous pre/post-processing, operating in two distinct phases (on/offline). Our results on Android smartphones and real-world user videos show that compared to a cutting-edge VTO GAN, MIRROR achieves 6.5x better accuracy with 20.1x faster video conversion and 16.9x less energy consumption.},
-journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (also published in ACM UbiComp, Oct 2024)},
 month = {December},
 articleno = {163},
 numpages = {27},
